knife tool bug #42488

Closed
opened 2014-11-04 07:48:49 +01:00 by Alexey · 7 comments

System Information
windows7 64
ASUS ATI Radeon HD6870

Blender Version
Broken: (All)
Worked: (None)

Short description of error
knife_tool1.png
knife_tool.png
knife_tool2.png
Exact steps for others to reproduce the error
knife_tool_bug.blend
knife_tool_steps1.png
knife_tool_steps2.png

System Information windows7 64 ASUS ATI Radeon HD6870 Blender Version Broken: (All) Worked: (None) **Short description of error** ![knife_tool1.png](https://archive.blender.org/developer/F121902/knife_tool1.png) ![knife_tool.png](https://archive.blender.org/developer/F121904/knife_tool.png) ![knife_tool2.png](https://archive.blender.org/developer/F121906/knife_tool2.png) **Exact steps for others to reproduce the error** [knife_tool_bug.blend](https://archive.blender.org/developer/F121908/knife_tool_bug.blend) ![knife_tool_steps1.png](https://archive.blender.org/developer/F121909/knife_tool_steps1.png) ![knife_tool_steps2.png](https://archive.blender.org/developer/F121911/knife_tool_steps2.png)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Inwader77

Added subscriber: @Inwader77

Added subscriber: @ideasman42

Added subscriber: @ideasman42

This is more a todo (or functionality choice)
Agree this could work different though.

As you have found - currently when you cut selected, unselected faces don't occlude them.

Setting as target for 2.73 since it would be nice to have it working how you suggest.

This is more a todo (or functionality choice) Agree this could work different though. As you have found - currently when you cut selected, unselected faces don't occlude them. Setting as target for 2.73 since it would be nice to have it working how you suggest.

This issue was referenced by 171a6bb5dc

This issue was referenced by 171a6bb5dc19655b3b7aee70496849890da1e4e4

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 171a6bb5dc.

Closed by commit 171a6bb5dc.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42488
No description provided.