Fix T42488: Knife (selected_only + occlude) failed